--- a/basic/bbcbasic.5
+++ b/basic/bbcbasic.5
@@ -1,4 +1,4 @@
-.TH BBC BASIC 5 \" -*- nroff -*-
+.TH "BBC BASIC" 5 2020-05-02 \" -*- nroff -*-
 
 .SH SYNOPSIS
 Implementations of BBC BASIC store saved programs in a tokenised
