[basic] Combine the tables for the 0xC8 extension byte.

--- a/basic/bbcbasic.5
+++ b/basic/bbcbasic.5
@@ -426,48 +426,50 @@ T}
 .SS Token 0xC8
 
 In the ARM and Mac dialects, the 0xC8 byte introduces an extension
-mechanism:
+mechanism, while in 6502 and Z80 0xC8 is expanded by itself to
+"LOAD").  Similarly for Windows (where it expands to "CASE"):
 
 .TS
 tab(|) allbox;
 lb lb lb lb lb lb
-l  c  s  c  s  l.
-Byte| 6502|Z80|ARM|Mac|Windows
-0xC8|"LOAD"|\fIExtension\fP|"CASE"
-.TE
-
-For ARM and Mac, the next byte identifies the expansion:
-
-.TS
-tab(|) allbox;
-lb lb
-l  l .
-Second Byte after 0xC8|ARM
-0x8E|"CASE"
-0x8F|"CIRCLE"
-0x90|"FILL"
-0x91|"ORIGIN"
-0x92|"POINT"
-0x93|"RECTANGLE"
-0x94|"SWAP"
-0x95|"WHILE"
-0x96|"WAIT"
-0x97|"MOUSE"
-0x98|"QUIT"
-0x99|"SYS"
-0x9A|"INSTALL"
-0x9B|"LIBRARY"
-0x9C|"TINT"
-0x9D|"ELLIPSE"
-0x9E|"BEATS"
-0x9F|"TEMPO"
-0xA0|"VOICES"
-0xA1|"VOICE"
-0xA2|"STEREO"
-0xA3|"OVERLAY"
-0xA4|"MANDEL"
-0xA5|"PRIVATE"
-0xA6|"EXIT"
+l  c s c s l
+l  c s c s l
+l  ^ s c s ^.
+Bytes|6502|Z80|ARM|Mac|Windows
+0xC8|"LOAD"|Extension|"CASE"
+0xC8 0x8E|T{
+.I interpreted
+.br
+.I separately
+T}|"CASE"|T{
+.I interpreted
+.br
+.I separately
+T}
+0xC8 0x8F||"CIRCLE"
+0xC8 0x90||"FILL"
+0xC8 0x91||"ORIGIN"
+0xC8 0x92||"POINT"
+0xC8 0x93||"RECTANGLE"
+0xC8 0x94||"SWAP"
+0xC8 0x95||"WHILE"
+0xC8 0x96||"WAIT"
+0xC8 0x97||"MOUSE"
+0xC8 0x98||"QUIT"
+0xC8 0x99||"SYS"
+0xC8 0x9A||"INSTALL"
+0xC8 0x9B||"LIBRARY"
+0xC8 0x9C||"TINT"
+0xC8 0x9D||"ELLIPSE"
+0xC8 0x9E||"BEATS"
+0xC8 0x9F||"TEMPO"
+0xC8 0xA0||"VOICES"
+0xC8 0xA1||"VOICE"
+0xC8 0xA2||"STEREO"
+0xC8 0xA3||"OVERLAY"
+0xC8 0xA4||"MANDEL"
+0xC8 0xA5||"PRIVATE"
+0xC8 0xA6||"EXIT"
 .TE
 
 .SS Single-Byte Tokens 0xC9 ... 0xCE
